2005-07-07  Jakub Jelinek  <jakub@redhat.com>

	* decl.c (gfc_match_entry): Allow ENTRY without parentheses
	even in FUNCTIONs.

2005-07-03  Kazu Hirata  <kazu@codesourcery.com>

	* gfortran.texi, intrinsic.texi: Fix typos.
	* symbol.c: Fix a comment typo.

2005-07-03  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* error.c (error_printf, error_print): Use ATTRIBUTE_GCC_GFC.
	* gfortran.h (ATTRIBUTE_GCC_GFC): New.
	(gfc_warning, gfc_warning_now, gfc_error, gfc_error_now,
	gfc_fatal_error, gfc_internal_error, gfc_notify_std): Use
	ATTRIBUTE_GCC_GFC.

2005-07-03  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	PR fortran/20842
	* io.c (match_dt_element): Do not allow END tag in PRINT or
	WRITE statement.

2005-07-02  Joseph S. Myers  <joseph@codesourcery.com>

	* lang.opt: Remove "." from end of help texts.

2005-07-01  Jerry DeLisle  <jvdelisle@verizon.net>

	* gfortran.texi: Fix typos and grammar.
	* invoke.texi: Fix typos and grammar.
	* intrinsic.texi: Add documentaion for eoshift, epsilon, etime, and
	exit. Fixed alignment of text for dtime syntax. Fixed a few line
	lengths.

2005-06-25  Jakub Jelinek  <jakub@redhat.com>

	* trans-stmt.c (gfc_trans_forall_1): Prefer to use smaller logical
	type than boolean_type_node.

2005-06-25  Kelley Cook  <kcook@gcc.gnu.org>

	* all files: Update FSF address in copyright headers.

2005-06-24  Jerry DeLisle <jvdelisle@verizon.net>

	PR fortran/21915
	* gfortran.h: Add symbols for new intrinsic functions.
	* intrinsic.c: Add new functions acosh, asinh, and atanh.
	* intrinsic.h: Add prototypes for the new functions.
	* iresolve.c (gfc_resolve_acosh): New function.
	(gfc_resolve_asinh): New function.
	(gfc_resolve_atanh): New function.
	* mathbuiltins.def: Add defines.
	* simplify.c (gfc_simplify_acosh): New function.
	(gfc_simplify_asinh): New function.
	(gfc_simplify_atanh): New function.

2005-06-24  Feng Wang  <fengwang@nudt.edu.cn>

	* simplify.c (gfc_simplify_modulo): Don't clear before get result.
