@@ -862,7 +862,7 @@ gfc_trans_array_constructor_value (stmtblock_t * pblock, tree type,
 	      gfc_add_expr_to_block (&body, tmp);
 
 	      *poffset = fold_build2 (PLUS_EXPR, gfc_array_index_type,
-				      *poffset, bound);
+				      *poffset, build_int_cst (NULL_TREE, n));
 	    }
 	  if (!INTEGER_CST_P (*poffset))
             {
